syntax= "proto3" ;

option java_multiple_files =true;
option java_package= "com.unla.chefEnCasa.grpc";

service usuario{
    rpc CrearUsuario(UsuarioRequest) returns (getCreado){}
    rpc TraerUsuarios(Empty) returns (getUsuarios){}
    rpc Login(LoginUsuario) returns (UsuarioResponse){}
    rpc TraerUsuariosSeguidos(UsuarioRequestById) returns (getUsuarios){}
}

message Empty{

}

message getUsuarios{
    repeated UsuarioResponse usuarios = 1;
}

message UsuarioRequest {
    string nombre=1;
	 string usuario=2;
	 string email=3;
	 string clave=4;
     string rol=5;
}
message UsuarioRequestById{
    int64 id=1;
}

message UsuarioResponse {
    int64 id = 1;
    string nombre = 2;
    string usuario = 3;
    string email = 4;
    string rol = 5;
    int32 puntaje = 6;
}

message LoginUsuario {
    string usuario = 1;
    string clave = 2;
}

message getCreado{
    bool creado = 1;
}